--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.polarbookshop'
-version = '0.0.1'
+version = '0.0.2-SNAPSHOT'
 sourceCompatibility = '17'
 
 description = 'Provides functionality for managing the books in the catalog.'
